# kaleidoscope

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  x-osx.cmake
core/: CMakeLists.txt  ast.cpp  codegen.cpp  kaleidoscope_jit.cpp  lexer.cpp  parser.cpp  tokens.cpp
include/: ast.h  ast.hpp  codegen.hpp  kaleidoscope_jit.hpp  lexer.h  lexer.hpp  parser.h  parser.hpp  tokens.h  tokens.hpp
jit/: CMakeLists.txt  KaleidoscopeJIT.h  jit.cpp  main.cpp
src/: CMakeLists.txt  ast.cpp  old.cpp  parser.cpp
test/: CMakeLists.txt  lexer.cpp  parser.cpp
unittests/: CMakeLists.txt  lexer_unittest.cpp  parser_unittest.cpp
